# gnuc-examples

./: README.md
dataStructure/dataType/: a.out  structTest.c  structTest2.c
dataStructure/sort/: CMakeLists.txt  Makefile  main.c  sort.c  sort.h
file/: fread.c  fwrite.c
sockets/: CMakeLists.txt  init_server.c  main.c
string/: rightMostIndex.c  stringTest.c
struct/: typedefstruct.c
tools/multifilec/: Makefile  calculator.c  calculator.h  main.c
